--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 	%head
-		%title Tavern
+		%title Emigroo
 
 		= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons"
 		= csrf_meta_tags
