--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -27,6 +27,6 @@
 	//%img{:src => "http://media.blizzard.com/hearthstone/images/backgroundart.jpg"}/
 	.row.container
 		%p Welcome to Emigroo
-		%a.waves-effect.waves-light.btn{:href => "/login"}
-			%i.material-icons.right cloud
-			Se connecter
+		-# %a.waves-effect.waves-light.btn{:href => "/login"}
+		-# 	%i.material-icons.right cloud
+		-# 	Se connecter
