--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,17 +5,33 @@
       %a.button-collapse{"data-activates" => "mobile-demo", :href => "#"}
         %i.material-icons menu
         %ul.right.hide-on-med-and-down
-          %li
-            %a{:href => "sass.html"} Sass
-          %li
-            %a{:href => "badges.html"} Components
-          %li
-            %a{:href => "collapsible.html"} Javascript
-          %li
-            %a{:href => "mobile.html"} Mobile
+          -# %li
+          -#   -# %a{:href => "sass.html"} Sass
+          -#   = link_to "Log out", destroy_user_session_path, :method => :delete
+          -#   = link_to "Log out", destroy_user_session_path, :method => :delete
+          -# %li
+          -#   %a{:href => "badges.html"} Components
+          -# %li
+          -#   %a{:href => "collapsible.html"} Javascript
+          -# %li
+          -#   %a{:href => "mobile.html"} Mobile
+
+          - if current_user
+            %li
+              = link_to current_user.name, destroy_user_session_path, :method => :delete
+
+            %li
+              = link_to "Log out", destroy_user_session_path, :method => :delete
+
+          - if not current_user
+            %li
+              = link_to "Sign up", "/users/sign_up"
+            %li
+              = link_to "Log in", user_session_path
         %ul#mobile-demo.side-nav
           %li
-            %a{:href => "sass.html"} Sass
+            -# %a{:href => "sass.html"} Sass
+            link_to "Profile", controller: "profiles", action: "show"
           %li
             %a{:href => "badges.html"} Components
           %li
