--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,27 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="input-field col s12">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
 
-  <div class="field">
+  <div class="input-field col s12">
+    <%= f.select :event_type, Event.type_events.keys.map {|role| [role.titleize, role]} %>
+    <%= f.label :event_type %>
+  </div>
+
+  <div class="input-field col s12">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "materialize-textarea" %>
   </div>
 
-  <div class="field">
+  <div class="input-field col s12">
     <%= f.label :adress %>
-    <%= f.text_area :adress %>
+    <%= f.text_field :adress %>
   </div>
 
-  <div class="field">
+  <div class="input-field col s12">
     <%= f.label :city %>
     <%= f.text_field :city %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="input-field col s12">
+    <%= f.submit "Valider", class: 'btn' %>
   </div>
 <% end %>
