--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Event</h1>
 
-<%= render 'form', event: @event %>
+<%= link_to 'Back', events_path, class: "waves-effect waves-teal btn-flat" %>
 
-<%= link_to 'Back', events_path %>
+<%= render 'form', event: @event %>
