--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -18,8 +18,7 @@
 
           - if current_user
             %li
-              = link_to current_user.name, destroy_user_session_path, :method => :delete
-
+              = link_to current_user.name, ""
             %li
               = link_to "Log out", destroy_user_session_path, :method => :delete
 
