--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -51,11 +51,7 @@
         %li
           %a.page-scroll{:href => "#services"} Services
         %li
-          %a.page-scroll{:href => "#works"} Portfolio
-        %li
           %a.page-scroll{:href => "#about-us"} About Us
-        %li
-          %a.page-scroll{:href => "#contact"} Contact Us
       / - End Menu
     / - End Off Canvas Side Menu
     / Home Section
@@ -111,220 +107,22 @@
             .service
               %span.fa.fa-bicycle.fa-3x
               %h4 Réfugiés
-              %p N'hésitez
+              %p Vous voulez vous renseigner sur les différents services mis a votre disposition? Trouver un centre d'aide alimentaire rapidement? Communiquer avec d'autres réfugiés rapidement et simplement. Emigroo vous propose un service rapide et innovant pour répondre à tous vos besoins.
           .col-md-4.col-sm-4
             .service
               %span.fa.fa-plug.fa-3x
-              %h4 App Design
-              %p Nulla vitae elit libero, a pharetra augue. At vero eos et accusamus et iusto odio dignissimos ducimus. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
-        %a.down-btn.page-scroll{:href => "#works"}
+              %h4 Bénévoles
+              %p Vous êtes un bénévole et vous voulez aider un maximum de personnes, utilisez Emigroo pour vous mettre en relation avec les associations qui ont le plus besoin de vous.
           %span.fa.fa-angle-down
     / Call-to-Action Section
     #cta
       .container.text-center
-        %a.btn.go-to-btn{:href => "#"} Check our shop
-    / Portfolio Section
-    #works
-      .container
-        .row.text-center
-          .col-md-8.col-md-offset-2
-            .section-title
-              %h2 Our Latest Projects
-              %hr/
-            %p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.
-        .space
-      .container-fluid
-        .row
-          .col-md-3.col-sm-6.nopadding
-            .portfolio-item
-              .hover-bg
-                %a{:href => "#"}
-                  .hover-text
-                    %h5 Logo Design
-                    %p.lead Client Seal
-                    .hline
-                  %img.img-responsive{:alt => "...", :src => "img/portfolio/01.jpg"}/
-          .col-md-3.col-sm-6.nopadding
-            .portfolio-item
-              .hover-bg
-                %a{:href => "#"}
-                  .hover-text
-                    %h5 Stationery
-                    %p.lead Design Project
-                    .hline
-                  %img.img-responsive{:alt => "...", :src => "img/portfolio/02.jpg"}/
-          .col-md-3.col-sm-6.nopadding
-            .portfolio-item
-              .hover-bg
-                %a{:href => "#"}
-                  .hover-text
-                    %h5 Branding
-                    %p.lead Metalbrand
-                    .hline
-                %img.img-responsive{:alt => "...", :src => "img/portfolio/03.jpg"}/
-          .col-md-3.col-sm-6.nopadding
-            .portfolio-item
-              .hover-bg
-                %a{:href => "#"}
-                  .hover-text
-                    %h5 Business Card
-                    %p.lead Clothing Line
-                    .hline
-                %img.img-responsive{:alt => "...", :src => "img/portfolio/04.jpg"}/
-      .space
-      .text-center
-        %a.btn.read-more-btn{:href => "#"} Check on Dribbble
-        %br/
-        %a.down-btn.page-scroll{:href => "#about-us"}
-          %span.fa.fa-angle-down
-    / Clients Section
-    #clients
-      .overlay
-        .container.text-center
-          .section-title
-            %h2 Our Partners
-            %hr/
-          %ul.clients
-            %li
-              %a{:href => "#"}
-                %img.img-responsive{:alt => "...", :src => "img/clients/01.png"}/
-            %li
-              %a{:href => "#"}
-                %img.img-responsive{:alt => "...", :src => "img/clients/02.png"}/
-            %li
-              %a{:href => "#"}
-                %img.img-responsive{:alt => "...", :src => "img/clients/03.png"}/
-            %li
-              %a{:href => "#"}
-                %img.img-responsive{:alt => "...", :src => "img/clients/04.png"}/
-    / About Us Section
-    #about-us
-      .container
-        .row.text-center
-          .col-md-8.col-md-offset-2
-            .section-title
-              %h2 About Us
-              %hr/
-            %p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.
-        .space
-        .row
-          .col-md-10.col-sm-10
-            .row
-              .col-md-4.col-sm-4
-                .team
-                  %img.img-responsive.img-circle{:alt => "...", :src => "img/team/02.jpg"}/
-                  %br/
-                  %h4 Lian Gwapa
-                  %p.small CEO/Founder
-                  %hr/
-              .col-md-4.col-sm-4
-                .team
-                  %img.img-responsive.img-circle{:alt => "...", :src => "img/team/04.jpg"}/
-                  %br/
-                  %h4 Jenn Pereira
-                  %p.small Web Coder
-                  %hr/
-              .col-md-4.col-sm-4
-                .team
-                  %img.img-responsive.img-circle{:alt => "...", :src => "img/team/03.jpg"}/
-                  %br/
-                  %h4 Alan Podemski
-                  %p.small Web Designer
-                  %hr/
-          .col-md-2.col-sm-2
-            .team.hire
-              %h4 We Are Hiring!
-              %hr/
-              .space
-              %a{:href => "#"}
-                %span.fa.fa-paper-plane-o.fa-2x
-        .text-center
-          %a.page-scroll.down-btn{:href => "#contact"}
-            %span.fa.fa-angle-down
-    / Testimonial Section
-    #testimonials
-      .overlay
-        .container
-          .section-title
-            %h2 What my Clients Say...
-            %hr/
-          #testimonial.owl-carousel.owl-theme
-            .item
-              %h3
-                Et iusto odio dignissimos ducimus qui blanditiis
-                = succeed "praesentium" do
-                  %br/
-                = succeed "occaecati" do
-                  %br/
-              %br/
-              %h6 LJ, Abc Company
-            .item
-              %h3
-                Fusce dapibus, tellus ac cursus commodo, tortor
-                %br/
-                mauris condimentum. Duis mollis, est non commodo luctus, nisi erat
-              %br/
-              %h6 Kai, Web Geekster
-            .item
-              %h3
-                Cras justo odio, dapibus ac facilisis in, egestas
-                = succeed "eget" do
-                  %br/
-              %br/
-              %h6 Jenn, Coders' Playground
-    / Contact Section
-    #contact
-      .container
-        .section-title.text-center
-          %h2 Contact Us
-          %hr/
-        .space
-        .row
-          .col-md-3
-            %address
-              %strong Address
-              %br/
-              %br/
-              ThemeForces.Com
-              %br/
-              Igbalangao, Bugasong, Anitque
-              %br/
-              5704, Philippines
-              %br/
-              Phone: (123) 456-7890
-            %ul.social
-              %li
-                %a{:href => "#"}
-                  %span.fa.fa-facebook
-              %li
-                %a{:href => "#"}
-                  %span.fa.fa-google-plus
-              %li
-                %a{:href => "#"}
-                  %span.fa.fa-twitter
-              %li
-                %a{:href => "#"}
-                  %span.fa.fa-dribbble
-          .col-md-9
-            %form{:autocomplete => "off"}
-              .row
-                .col-md-6
-                  %input.form-control{:placeholder => "Your Name", :type => "text"}/
-                  %input.form-control{:placeholder => "Phone No.", :type => "text"}/
-                .col-md-6
-                  %input.form-control{:placeholder => "Email", :type => "text"}/
-                  %input.form-control{:placeholder => "Subject", :type => "text"}/
-              %textarea.form-control{:placeholder => "Message", :rows => "4"}
-              .text-right
-                %a.btn.send-btn{:href => "#"} Send
+        %a.btn.go-to-btn{:href => "/users/sign_in"} Se connecter / Créer un compte
     %nav#footer
       .container
         .pull-left
           %p
-            2014 © Arcadia. All Rights Reserved. Coded by
-            %a{:href => "https://dribbble.com/jennpereira"} Jenn
-            \& Designed by
-            %a{:href => "https://dribbble.com/alanpodemski"} Alan
+            2016 © Htag - Nuit de l'informatique 2016
         .pull-right
           %a.page-scroll{:href => "#home"}
             Back to Top
