Update, correction grammatical error landing.html.haml

--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -61,7 +61,7 @@
         %nav#menu{"data-target" => ".navmenu", "data-toggle" => "offcanvas"}
           %span.fa.fa-bars
         .content
-          %h4 Faite une différences
+          %h4 Faites une différence
           %hr/
           .header-text.btn
             %h1
