--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing News</h1>
+<%= link_to 'Show', @news, class: "waves-effect waves-teal btn-flat" %> |
+<%= link_to 'Back', '/home', class: "waves-effect waves-teal btn-flat"   %>
+
+<div class="row">
+  <div class="col s12">
+    <div class="card-panel">
+<h1>Editer une actualité</h1>
 
 <%= render 'form', news: @news %>
-
-<%= link_to 'Show', @news %> |
-<%= link_to 'Back', news_index_path %>
+</div>
+</div>
+</div>
