--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Event</h1>
+<%= link_to 'Show', @event, class: "waves-effect waves-teal btn-flat" %> |
+<%= link_to 'Back', '/home', class: "waves-effect waves-teal btn-flat" %>
 
+<div class="row">
+  <div class="col s12">
+    <div class="card-panel">
+<h1>Editer un évènement</h1>
 <%= render 'form', event: @event %>
-
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+</div>
+</div>
+</div>
