--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,9 @@
-<%= link_to 'Back', "/", class: "waves-effect waves-teal btn-flat" %>
+<%= link_to 'Back', "/home", class: "waves-effect waves-teal btn-flat" %>
 
 <div class="row">
   <div class="col s12">
     <div class="card-panel">
-<h2>New Event</h2>
+<h2>Nouvel évènement</h2>
 <%= render 'form', event: @event %>
 </div>
 </div>
