--- a/app/views/news/new.html.erb
+++ b/app/views/news/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New News</h1>
 
+<%= link_to 'Back', '/home', class: "waves-effect waves-teal btn-flat" %>
+
+<div class="row">
+  <div class="col s12">
+    <div class="card-panel">
+<h2>Nouvelle actualité</h2>
 <%= render 'form', news: @news %>
-
-<%= link_to 'Back', '/' %>
+</div>
+</div>
+</div>
